--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
   "root": true,
   "env": {
     "es6": true,
-    "browser": true,
-    "node": true
+    "browser": true
   },
   "plugins": ["react"],
   "extends": ["eslint:recommended", "plugin:react/recommended"],
