--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "parcel": "parcel src/index.html",
     "watch": "parcel watch src/index.html --out-file index.html -d build/",
-    "dist": "npm run copyfiles && set NODE_ENV = 'production' && parcel build src/index.html /app -d dist/static --no-source-maps",
-    "copyfiles": "rm -rf dist/* && cp -r package.json src/servers dist"
+    "dist": "rm -rf dist && mkdir dist && set NODE_ENV = 'production' && parcel build src/index.html -d dist --no-source-maps"
   },
   "babel": {
     "presets": [
