Refactor UI to use rsuite components

--- a/package.json
+++ b/package.json
@@ -22,15 +22,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@atlaskit/button": "^13.3.12",
-    "@atlaskit/css-reset": "^5.0.10",
-    "@atlaskit/icon": "^20.1.2",
-    "@atlaskit/icon-object": "^5.0.3",
-    "@atlaskit/inline-edit": "^10.0.32",
-    "@atlaskit/page": "^11.0.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.1.0"
+    "rsuite": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
