--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "less": "^3.11.3",
     "miragejs": "^0.1.37",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "react-hot-loader": "^4.12.20"
   },
   "alias": {
