--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lists",
   "version": "1.0.0",
-  "description": "A template for a react project",
+  "description": "Lists!",
   "main": "index.js",
   "scripts": {
     "parcel": "parcel src/index.html -d build/",
